--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,10 +1,15 @@
 name: 🐛 Bug report
 description: Report a bug with the GitHub Action
-title: ""
+title: "[BUG] "
 labels: ["bug"]
 assignees: []
 
 body:
+  - type: markdown
+    attributes:
+      value: |
+        Thanks for taking the time to fill out this bug report!
+
   - type: dropdown
     id: issue_type
     attributes:
@@ -19,48 +24,31 @@ body:
     validations:
       required: true
 
-  - type: checkboxes
-    id: preflight
-    attributes:
-      label: Preliminary Checks
-      description: Please confirm you've completed the following before filing the issue.
-      options:
-        - label: I have updated to the latest version of the action
-        - label: I have read the [README documentation](https://github.com/your-username/github-action-issue-ack#readme)
-        - label: I have checked the [webhook setup guide](https://github.com/your-username/github-action-issue-ack/blob/main/docs/webhook-setup.md)
-        - label: I have searched for [existing GitHub issues](https://github.com/your-username/github-action-issue-ack/issues)
-        - label: I have tested my webhook URLs manually
-
   - type: textarea
     id: describe_bug
     attributes:
       label: Describe the Bug
-      description: |
-        A clear and concise description of what the bug is. The more detail you can provide, the faster we can triage and resolve the issue.
-        Do not remove any sections from the template below. If a step is not applicable, leave it empty.
+      description: A clear and concise description of what the bug is.
       placeholder: |
-        1. Environment
-           1. GitHub Action version:
-           2. Repository type (public/private):
-           3. Webhook platform:
-              - [ ] Slack
-              - [ ] Discord
-              - [ ] Both
-           4. GitHub event that triggered the action:
-           5. Issue details (if applicable):
-              - Issue title:
-              - Issue labels:
-              - Number of reactions:
-              - Number of comments:
-           6. How widespread is the issue. Percentage of repositories affected.
+        **Environment:**
+        - GitHub Action version:
+        - Repository type (public/private):
+        - Webhook platform (Slack/Discord):
+        - GitHub event that triggered the action:
+
+        **Issue details (if applicable):**
+        - Issue title:
+        - Issue labels:
+        - Number of reactions:
+        - Number of comments:
+    validations:
+      required: true
 
   - type: textarea
     id: workflow_config
     attributes:
       label: Workflow Configuration
-      description: |
-        Please share your workflow configuration (with sensitive information redacted).
-      render: yaml
+      description: Please share your workflow configuration (with sensitive information redacted).
       placeholder: |
         ```yaml
         name: Issue Notifications
@@ -87,9 +75,7 @@ body:
     id: action_logs
     attributes:
       label: Action Logs
-      description: |
-        Add the GitHub Actions logs that show the error or unexpected behavior. You can find these in the Actions tab of your repository.
-      render: shell
+      description: Add the GitHub Actions logs that show the error or unexpected behavior.
       placeholder: |
         Action logs here (from the "Issue Notification Action" step)
 
@@ -97,24 +83,21 @@ body:
     id: reproduction_steps
     attributes:
       label: Steps to Reproduce
-      description: |
-        Please provide steps to reproduce the issue, along with the expected vs. actual behavior.
+      description: Please provide steps to reproduce the issue.
       placeholder: |
         1. Set up the action with the following configuration...
         2. Create an issue with the following criteria...
         3. Expected: Notification should be sent to Slack/Discord
         4. Actual: [What actually happened]
 
-  - type: textarea
-    id: other_info
+  - type: checkboxes
+    id: preflight
     attributes:
-      label: Other Information
-      description: |
-        Add any other information such as error messages, related issues, suggestions, or helpful links.
-
-  - type: textarea
-    id: additional_context
-    attributes:
-      label: Additional Context
-      description: |
-        Add any additional context about the problem here.
+      label: Preliminary Checks
+      description: Please confirm you've completed the following before filing the issue.
+      options:
+        - label: I have updated to the latest version of the action
+        - label: I have read the README documentation
+        - label: I have checked the webhook setup guide
+        - label: I have searched for existing GitHub issues
+        - label: I have tested my webhook URLs manually
