--- a/examples/batch-checking-only.yml
+++ b/examples/batch-checking-only.yml
@@ -14,6 +14,8 @@ jobs:
 
       - name: Issue Notification Action
         uses: ./
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           # Webhook configuration
           slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
