--- a/examples/basic-workflow.yml
+++ b/examples/basic-workflow.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Issue Notification Action
         uses: your-username/github-action-issue-ack@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
           title_keywords: "urgent,security,bug"
