--- a/examples/batch-checking-workflow.yml
+++ b/examples/batch-checking-workflow.yml
@@ -20,6 +20,8 @@ jobs:
 
       - name: Issue Notification Action
         uses: ./
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           # Webhook URLs
           slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
