--- a/examples/workflow.yml
+++ b/examples/workflow.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Issue Notification Action
         uses: ./
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           # Webhook URLs (set these as repository secrets)
           slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
