--- a/action.yml
+++ b/action.yml
@@ -36,17 +36,17 @@ inputs:
 
   # Message customization
   message_template:
-    description: "Custom message template. Use {title}, {url}, {author}, {reactions}, {comments}, {repo}, {repo_url}, {repo_link} as placeholders"
+    description: "Custom message template. Use {title}, {url}, {author}, {reactions}, {comments}, {repo}, {repo_url}, {repo_link}, {created_minutes_ago}, {created_hours_ago}, {created_days_ago}, {created_at}, {created_ago} as placeholders"
     required: false
-    default: '🚨 High-engagement issue detected!\n\n**{title}**\nBy: {author}\nReactions: {reactions} | Comments: {comments}\nRepository: {repo_link}\n{url}'
+    default: '**{title}**\nBy: {author}\nReactions: {reactions} | Comments: {comments}\nRepository: {repo_link}\nCreated: {created_hours_ago} hours ago\n{url}'
   new_issue_prefix:
     description: "Prefix for new issue notifications (use {repo_link} for repository link)"
     required: false
-    default: "🆕 New issue created on {repo_link}!"
+    default: "🚨 New issue created on {repo_link}!"
   threshold_prefix:
     description: "Prefix for threshold notifications (use {repo_link} for repository link)"
     required: false
-    default: "🚨 High-engagement issue detected on {repo_link}!"
+    default: "📈 High-engagement issue detected on {repo_link}!"
 
   # Notification settings
   notify_on_create:
