--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -59,6 +59,7 @@ jobs:
 
             **{title}**
             By: {author}
+            Created: {created_ago}
             Reactions: {reactions} | Comments: {comments}
             {url}
 
