Add `issues_only` to only check issues and not PRs

--- a/action.yml
+++ b/action.yml
@@ -23,6 +23,12 @@ inputs:
     description: "Comma-separated labels that should exclude the issue"
     required: false
     default: ""
+  
+  # Only check issues, not pull requests
+  issues_only:
+    description: "Only check issues, not pull requests"
+    required: false
+    default: "true"
 
   # Thresholds
   reaction_threshold:
